[metadata]
name = Dragon Knight
summary =  Toolbox of Ryu SDN framework
license = MIT
author = Takeshi, John-Lin
author-email = a86487817@gmail.com
home-page = http://blog.takeshi.tw
description-file = README.md
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: System :: Networking
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Operating System :: Unix
keywords =
    SDN
    ryu

[files]
packages =
    dragon_knight

[entry_points]
console_scripts =
    ryu-cli = ryu.cmd.ryu_cli:main
