[metadata]
name = Dragon Knight
summary =  Toolbox of Ryu SDN framework
license = MIT
author = Takeshi and John-Lin
author-email = a86487817@gmail.com
home-page = http://blog.takeshi.tw
description-file = README.md

[files]
packages =
    dragon_knight

[entry_points]
console_scripts =
    dragon-knightd = dragon_knight.daemon:main
    dragon-knight = dragon_knight.cli:main

[bdist_wheel]
universal = 1
